workspaces/DC Dev/DC Dev/src/objects/UFHT__Sharing_Purpose__c.object
<CustomObject>
    <fields>
        <fullName>UFHT__Currency_Field__c</fullName>
        <label>Currency Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UFHT__EncryptedFieldsFor_All__c</fullName>
        <label>EncryptedFieldsFor All</label>
        <length>150</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UFHT__EncryptedFieldsFor_CreditCard__c</fullName>
        <label>EncryptedFieldsFor CreditCard</label>
        <length>150</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UFHT__EncryptedFieldsFor_LastFour__c</fullName>
        <label>EncryptedFieldsFor LastFour</label>
        <length>150</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UFHT__EncryptedFieldsFor_Nino__c</fullName>
        <label>EncryptedFieldsFor Nino</label>
        <length>150</length>
        <maskChar>X</maskChar>
        <maskType>nino</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UFHT__EncryptedFieldsFor_SIN__c</fullName>
        <label>EncryptedFieldsFor SIN</label>
        <length>150</length>
        <maskChar>X</maskChar>
        <maskType>sin</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UFHT__EncryptedFieldsFor_SSN__c</fullName>
        <label>EncryptedFieldsFor SSN</label>
        <length>150</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UFHT__EncryptedString_Field__c</fullName>
        <label>EncryptedString Field</label>
        <length>150</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UFHT__Percent_Field__c</fullName>
        <label>Percent Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UFHT__Text_Field__c</fullName>
        <label>Text Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sharing Purpose</label>
    <nameField>
        <label>Sharing Purpose Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sharing Purposes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>